# WildSync_issta25

./: .gitignore  LICENSE  README.md
Evaluation/Sec_5-5_Effectiveness_Table2/: ARTIFACT_do_fuzz.sh  build_coverage.sh  calculate_parsed_lcov.py  captainrc  do_coverage.sh  inforc  parse_lcov.py  parse_libfuzzer_logs.py  run.sh  start_coverage.sh
Evaluation/Sec_5-5_Effectiveness_Table2/oss-fuzz_coverage/infra/: helper.py
Evaluation/Sec_5-5_Effectiveness_Table2/oss-fuzz_coverage/new_bin/: coverage
Evaluation/Sec_5-5_Effectiveness_Table2/oss-fuzz_coverage/projects/fribidi/: build.sh  meson.build  new_fuzz.patch
Evaluation/Sec_5-5_Effectiveness_Table2/oss-fuzz_coverage/projects/fribidi/new_fuzzers/: fribidi__fribidi_get_joining_types__0.cpp  fribidi__fribidi_join_arabic__0.cpp
Evaluation/Sec_5-5_Effectiveness_Table2/oss-fuzz_coverage/projects/libheif/: CMakeLists.txt
Evaluation/Sec_5-5_Effectiveness_Table2/oss-fuzz_coverage/projects/libheif/new_fuzzers/: libheif__heif_image_handle_get_color_profile_type__1.cpp  libheif__heif_image_handle_get_color_profile_type__2.cpp  libheif__heif_image_handle_get_luma_bits_per_pixel__2.cpp  libheif__heif_image_handle_get_luma_bits_per_pixel__4.cpp  libheif__heif_image_handle_get_raw_color_profile_size__0.cpp
Evaluation/Sec_5-5_Effectiveness_Table2/targets/cairo/: new_fuzzers.txt  orig_fuzzers.txt
Evaluation/Sec_5-5_Effectiveness_Table2/targets/cjson/: orig_fuzzers.txt
Evaluation/Sec_5-5_Effectiveness_Table2/targets/fribidi/: new_fuzzers.txt  orig_fuzzers.txt
Evaluation/Sec_5-5_Effectiveness_Table2/targets/gdk-pixbuf/: new_fuzzers.txt  orig_fuzzers.txt
Evaluation/Sec_5-5_Effectiveness_Table2/targets/json-c/: new_fuzzers.txt  orig_fuzzers.txt
Evaluation/Sec_5-5_Effectiveness_Table2/targets/krb5/: new_fuzzers.txt  orig_fuzzers.txt
Evaluation/Sec_5-5_Effectiveness_Table2/targets/lcms/: new_fuzzers.txt  orig_fuzzers.txt
Evaluation/Sec_5-5_Effectiveness_Table2/targets/leptonica/: new_fuzzers.txt  orig_fuzzers.txt
Evaluation/Sec_5-5_Effectiveness_Table2/targets/libarchive/: new_fuzzers.txt  orig_fuzzers.txt
Evaluation/Sec_5-5_Effectiveness_Table2/targets/libass/: new_fuzzers.txt  orig_fuzzers.txt
Evaluation/Sec_5-5_Effectiveness_Table2/targets/libcue/: new_fuzzers.txt
Evaluation/Sec_5-5_Effectiveness_Table2/targets/libgd/: new_fuzzers.txt  orig_fuzzers.txt
Evaluation/Sec_5-5_Effectiveness_Table2/targets/libharu/: new_fuzzers.txt  orig_fuzzers.txt
Evaluation/Sec_5-5_Effectiveness_Table2/targets/libheif/: new_fuzzers.txt  orig_fuzzers.txt
Evaluation/Sec_5-5_Effectiveness_Table2/targets/libpcap/: new_fuzzers.txt  orig_fuzzers.txt
Evaluation/Sec_5-5_Effectiveness_Table2/targets/libplacebo/: new_fuzzers.txt  orig_fuzzers.txt
Evaluation/Sec_5-5_Effectiveness_Table2/targets/libpng/: new_fuzzers.txt  orig_fuzzers.txt
Evaluation/Sec_5-5_Effectiveness_Table2/targets/libsoup3/: new_fuzzers.txt  orig_fuzzers.txt
Evaluation/Sec_5-5_Effectiveness_Table2/targets/libtiff/: new_fuzzers.txt  orig_fuzzers.txt
Evaluation/Sec_5-5_Effectiveness_Table2/targets/libvnc/: new_fuzzers.txt  orig_fuzzers.txt
Evaluation/Sec_5-5_Effectiveness_Table2/targets/libxmlb/: new_fuzzers.txt  orig_fuzzers.txt
Evaluation/Sec_5-5_Effectiveness_Table2/targets/libyang/: new_fuzzers.txt  orig_fuzzers.txt
Evaluation/Sec_5-5_Effectiveness_Table2/targets/lmdb/: new_fuzzers.txt  orig_fuzzers.txt
Evaluation/Sec_5-5_Effectiveness_Table2/targets/mxml/: new_fuzzers.txt  orig_fuzzers.txt
Evaluation/Sec_5-5_Effectiveness_Table2/targets/vorbis/: new_fuzzers.txt  orig_fuzzers.txt
Evaluation/Sec_5-5_Effectiveness_Table2/targets/yyjson/: new_fuzzers.txt
Evaluation/Sec_5-5_Effectiveness_Table2/targets/zlib/: new_fuzzers.txt  orig_fuzzers.txt
Evaluation/Sec_5-6_Comparison_Table4/: ARTIFACT_do_fuzz.sh  ARTIFACT_post_fuzz.sh  build.sh  build_casr.sh  build_coverage.sh  build_trans.sh  calculate_parsed_lcov.py  captainrc  common.sh  count_crashes.py  do_casr.sh  do_coverage.sh  do_translate.sh  inforc  parse_lcov.py  run.sh  start.sh  start_casr.sh  start_coverage.sh  start_translate.sh
Evaluation/Sec_5-6_Comparison_Table4/hopper_docker/: Dockerfile  build.sh  hopper_casr.py  process_casr.sh
Evaluation/Sec_5-6_Comparison_Table4/hopper_targets/: hopper_fuzz.sh  hopper_sanitize.py
Evaluation/Sec_5-6_Comparison_Table4/hopper_translate_crash/: hopper_build-addon.sh  hopper_fuzz.sh
Evaluation/Sec_5-6_Comparison_Table4/oss-fuzz_hopper_casr/: .gitignore
Evaluation/Sec_5-6_Comparison_Table4/oss-fuzz_hopper_casr/projects/libsoup3/: Dockerfile  build.sh  meson.build  project.yaml
Evaluation/Sec_5-6_Comparison_Table4/oss-fuzz_hopper_casr/projects/libsoup3/new_fuzzers/: libsoup3__soup_message_body_append_bytes__0.cpp  libsoup3__soup_message_get_method__0.cpp  libsoup3__soup_message_get_reason_phrase__7.cpp  libsoup3__soup_message_get_request_headers__10.cpp  libsoup3__soup_message_get_request_headers__4.cpp  libsoup3__soup_message_get_request_headers__6.cpp  libsoup3__soup_message_get_request_headers__9.cpp  libsoup3__soup_message_get_response_headers__5.cpp  libsoup3__soup_message_get_uri__6.cpp  libsoup3__soup_message_headers_get_content_disposition__0.cpp  libsoup3__soup_message_new_from_uri__0.cpp  libsoup3__soup_message_new_from_uri__5.cpp  libsoup3__soup_session_send__0.cpp
Evaluation/Sec_5-6_Comparison_Table5/: ARTIFACT_do_fuzz.sh  ARTIFACT_post_fuzz.sh  build.sh  calculate_parsed_lcov.py  captainrc  common.sh  inforc  parse_lcov.py  start.sh
Evaluation/Sec_5-6_Comparison_Table5/oss-fuzz_coverage/: notes.md
WildSync_Demo/auto_extract/: ARTIFACT_synthesize.sh  do_work.py  external.cpp  pair.json  seed_gen.c  setup.cfg  vorbis_fuzzer.cc  vorbis_symbols.txt
WildSync_Demo/auto_extract/src/fuzzsyn/: utils.py
WildSync_Demo/auto_extract/src/fuzzsyn.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
WildSync_Demo/auto_extract/src/fuzzsyn/backtrace/: backtrace.py  utils.py
WildSync_Demo/auto_extract/src/fuzzsyn/gen_harness/: combine_code.py  consume_external.py  consume_harness.py
tools/: install_deps.sh
(+1932 files in other folders)
