[metadata]
name = fuzzsyn
version = 0.0.1
description = Fuzzing harness generation
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/spencerwuwu/auto_extract
license = Apache-2.0
license_file = LICENSE
classifiers =
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3

[options]
packages = find:
install_requires =
    networkx==2.6.3
    tree-sitter==0.20.1
    pydot==1.4.1
    typer==0.4.1
    loguru==0.6.0

python_requires = >=3.8
package_dir = =src

[options.packages.find]
where = ./src
