include_directories(${libheif_BINARY_DIR} ${libheif_SOURCE_DIR})


add_executable(libheif__heif_image_handle_get_color_profile_type__0 libheif__heif_image_handle_get_color_profile_type__0.cpp)
target_link_libraries(libheif__heif_image_handle_get_color_profile_type__0 PRIVATE heif)

add_executable(libheif__heif_image_handle_get_color_profile_type__1 libheif__heif_image_handle_get_color_profile_type__1.cpp)
target_link_libraries(libheif__heif_image_handle_get_color_profile_type__1 PRIVATE heif)

add_executable(libheif__heif_image_handle_get_color_profile_type__2 libheif__heif_image_handle_get_color_profile_type__2.cpp)
target_link_libraries(libheif__heif_image_handle_get_color_profile_type__2 PRIVATE heif)

add_executable(libheif__heif_image_handle_get_color_profile_type__4 libheif__heif_image_handle_get_color_profile_type__4.cpp)
target_link_libraries(libheif__heif_image_handle_get_color_profile_type__4 PRIVATE heif)

add_executable(libheif__heif_image_handle_get_luma_bits_per_pixel__1 libheif__heif_image_handle_get_luma_bits_per_pixel__1.cpp)
target_link_libraries(libheif__heif_image_handle_get_luma_bits_per_pixel__1 PRIVATE heif)

add_executable(libheif__heif_image_handle_get_luma_bits_per_pixel__2 libheif__heif_image_handle_get_luma_bits_per_pixel__2.cpp)
target_link_libraries(libheif__heif_image_handle_get_luma_bits_per_pixel__2 PRIVATE heif)

add_executable(libheif__heif_image_handle_get_luma_bits_per_pixel__3 libheif__heif_image_handle_get_luma_bits_per_pixel__3.cpp)
target_link_libraries(libheif__heif_image_handle_get_luma_bits_per_pixel__3 PRIVATE heif)

add_executable(libheif__heif_image_handle_get_luma_bits_per_pixel__4 libheif__heif_image_handle_get_luma_bits_per_pixel__4.cpp)
target_link_libraries(libheif__heif_image_handle_get_luma_bits_per_pixel__4 PRIVATE heif)

add_executable(libheif__heif_image_handle_get_luma_bits_per_pixel__7 libheif__heif_image_handle_get_luma_bits_per_pixel__7.cpp)
target_link_libraries(libheif__heif_image_handle_get_luma_bits_per_pixel__7 PRIVATE heif)

add_executable(libheif__heif_image_handle_get_raw_color_profile_size__0 libheif__heif_image_handle_get_raw_color_profile_size__0.cpp)
target_link_libraries(libheif__heif_image_handle_get_raw_color_profile_size__0 PRIVATE heif)

add_executable(libheif__heif_image_handle_get_raw_color_profile_size__1 libheif__heif_image_handle_get_raw_color_profile_size__1.cpp)
target_link_libraries(libheif__heif_image_handle_get_raw_color_profile_size__1 PRIVATE heif)

add_executable(libheif__heif_image_handle_get_raw_color_profile_size__3 libheif__heif_image_handle_get_raw_color_profile_size__3.cpp)
target_link_libraries(libheif__heif_image_handle_get_raw_color_profile_size__3 PRIVATE heif)

add_executable(libheif__heif_image_handle_get_raw_color_profile_size__4 libheif__heif_image_handle_get_raw_color_profile_size__4.cpp)
target_link_libraries(libheif__heif_image_handle_get_raw_color_profile_size__4 PRIVATE heif)

